# AndrIoT

./: .gitignore  .travis.yml  README.md  build.gradle  debug.keystore  gradle.properties  settings.gradle  versions.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pio-test.cpp
app/src/main/cpp/include/: native_debug.h
app/src/main/res/layout/: activity_main.xml  dash_act.xml  dash_frag.xml  image_frag.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
common/: build.gradle  proguard-rules.pro
common/src/main/: AndroidManifest.xml
firebase/: .firebaserc  .gitignore  package.json
firebase/firebaseFunctions/: .eslintrc.json  index.js  package.json
firebase/firebaseFunctions/graphql/: resolvers.js  schema.js  server.js
firebase/functions/: index.js  package-lock.json  package.json
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/drawable/: ic_rssi_level.xml
mobile/src/main/res/layout/: interact_fragment.xml  scan_fragment.xml  scan_item.xml
mobile/src/main/res/values/: colors.xml  strings.xml
quality/: jacoco.gradle  quality.gradle
quality/checkstyle/: checkstyle.xml  suppressions.xml
quality/lint/: lint.xml
things/: build.gradle  proguard-rules.pro
things/src/main/: AndroidManifest.xml
things/src/main/res/color/: selection_sidebar.xml
things/src/main/res/drawable/: ic_motion.xml  ic_quality.xml  ic_thermometer.xml
things/src/main/res/layout/: dash_fragment.xml  graph_fragment.xml  (+3 more)
(+204 files in other folders)
